--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "net.yuzumone.expandabletextview"
-        minSdkVersion 21
+        applicationId "net.expandable.sample"
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
