--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ before_script:
 - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
 - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
+before_install:
+- yes | sdkmanager "platforms;android-27"
+
 language: android
 jdk: oraclejdk8
 
@@ -18,10 +21,10 @@ android:
     - extra-android-support
 
     # The BuildTools version used by your project
-    - build-tools-25.0.3
+    - build-tools-27.0.3
 
     # The SDK version used to compile your project
-    - android-25
+    - android-27
 
 script:
   - "/bin/bash ./gradlew install"
