--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 # Emulator Management: Create, Start and Wait
-before_script:
-- chmod +x gradlew
-- echo "$ANDROID_HOME"
-- mkdir "$ANDROID_HOME/licenses" || true
-- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-
-before_install:
-- yes | sdkmanager "platforms;android-27"
-
 language: android
-jdk: oraclejdk8
+
+jdk:
+  - oraclejdk8
+
+install:
+  - yes | sdkmanager "tools" &>/dev/null
+  - yes | sdkmanager "platform-tools" &>/dev/null
+  - yes | sdkmanager "platforms;android-29" &>/dev/null
+  - yes | sdkmanager --update &>/dev/null
+  - yes | sdkmanager --licenses &>/dev/null
 
 android:
   components:
@@ -21,10 +20,10 @@ android:
     - extra-android-support
 
     # The BuildTools version used by your project
-    - build-tools-27.0.3
+    - build-tools-29.0.2
 
     # The SDK version used to compile your project
-    - android-27
+    - android-29
 
 script:
   - "/bin/bash ./gradlew install"
