--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 # Emulator Management: Create, Start and Wait
-before_script:
-- chmod +x gradlew
-- echo "$ANDROID_HOME"
-- mkdir "$ANDROID_HOME/licenses" || true
-- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-
-before_install:
-- yes | sdkmanager "platforms;android-29"
-
 language: android
-jdk: oraclejdk8
+
+jdk:
+  - oraclejdk8
+
+install:
+  - yes | sdkmanager "tools" &>/dev/null
+  - yes | sdkmanager "platform-tools" &>/dev/null
+  - yes | sdkmanager "platforms;android-29" &>/dev/null
+  - yes | sdkmanager --update &>/dev/null
+  - yes | sdkmanager --licenses &>/dev/null
 
 android:
   components:
