--- a/expandabletextview/src/main/AndroidManifest.xml
+++ b/expandabletextview/src/main/AndroidManifest.xml
@@ -1,10 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-    package="net.expandable">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:label="@string/app_name"
         android:supportsRtl="true">
-
     </application>
-
 </manifest>
