--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,23 @@
 name: Android build test
 
-on: [push]
+on:
+  pull_request:
+    types: [opened, synchronize]
+  push:
+    branches:
+      - master
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Setup java
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: 'temurin'
+          java-version: '11'
       - name: Build with Gradle
         run: |
-          ./gradlew install
+          ./gradlew publishToMavenLocal
           ./gradlew lint
