--- a/expandabletextview/build.gradle
+++ b/expandabletextview/build.gradle
@@ -34,3 +34,17 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
 }
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.yuzumone'
+                artifactId = 'expandabletextview'
+                version = '0.3.2'
+            }
+        }
+    }
+}
